infrastructure/k8s/overlays/prod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curs-flask
spec:
  selector:
    matchLabels:
      app: curs-flask
  replicas: 2
  template:
    spec:
      imagePullSecrets:
        - name: docker-credentials
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 2000
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: curs-flask
        image: trojanul2008/curs-flask:prod-PLACEHOLDER
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 10001
          runAsGroup: 10001
          capabilities:
            drop: ["ALL"]
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
            ephemeral-storage: "100Mi"
          limits:
            memory: "256Mi"
            cpu: "500m"
            ephemeral-storage: "200Mi"
