infrastructure/k8s/overlays/prod/remove-affinity-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curs-flask
spec:
  template:
    spec:
      affinity: null
