infrastructure/k8s/overlays/prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: curs-flask-ingress
spec:
  ingressClassName: traefik  # forţează clasa Traefik

  rules:
    - host: exchange.istartit.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: curs-flask
                port:
                  number: 80
